[project]
name = "shelf-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "shelf"
]

[tool.uv.sources]
shelf = { path = "vendor/shelf", editable = true }

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
